Tue Apr 17 17:01:59 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.h, gui/gdmconfig-strings.c, gui/gdmconfig.c,
	  gui/gdmconfig.glade, gui/gdmlogin.c:  Add option for not
	  scaling the background to fit, and tiling instead.  I think
	  I might just implement more like the original background
	  selection thingie for the desktop.

	* gui/gdmlogin.c:  Apply a patch (and massage it a bit) from
	  rmurray+gnome@cyberhqz.com (Ryan Murray) to make the locale
	  menu just not display if the locale file is missing.

2001-04-17  Ian McKellar  <ian@eazel.com>

	* acinclude.m4:
	Removed this - it contained out of date gettext stuff that was 
	screwing up my build.

	* config/Default.debian:
	* config/Makefile.am:
	* configure.in:
	* debian/.cvsignore:
	* debian/README.Debian:
	* debian/changelog.in:
	* debian/changelog.old:
	* debian/control:
	* debian/copyright:
	* debian/dirs:
	* debian/docs:
	* debian/ex.doc-base.package:
	* debian/gdm.pod:
	* debian/gdmchooser.pod:
	* debian/gdmlogin.pod:
	* debian/init:
	* debian/postinst:
	* debian/postrm:
	* debian/rules:
	Added Debian build stuff and default config. It shouldn't break
	builds on other platforms, but it might.

Sun Apr 15 12:58:02 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: fix mispelling thanks to jrb

Fri Mar 30 18:17:00 2001  George Lebl <jirka@5z.com>

	* configure.in: up version to 2.2.1, and check for GdkPixbuf

	* config/Default, config/gdm.conf.in, daemon/gdm.h, gui/Makefile.am,
	  gui/gdmconfig-strings.c, gui/gdmconfig.c, gui/gdmconfig.glade,
	  gui/gdmconfig.h, gui/gdmlogin.c:  Add background image/color
	  setting and remove that setup from the Default init.

	* gui/Makefile.am, gui/gdmconfig.c, gui/icon-entry-hack.[ch]:
	  Put in the icon entry hack fromt he panel to make the icon
	  entry behave properly

	* gui/gdmlogin.c:  Make overlay window override redirect, don't
	  proxy keyboard events to entry when window is iconified, raise