@@ -248,6 +248,7 @@ docs/Makefile
 docs/C/Makefile
 po/Makefile.in
 intl/Makefile
+debian/Makefile
 config/Failsafe
 config/gdm.conf
 config/Gnome
