@@ -1,2 +1,4 @@
 *-stamp
 changelog
+Makefile
+Makefile.in
