@@ -1,0 +1,19 @@
+SUBDIRS =
+
+EXTRA_DIST = \
+	README.Debian		\
+	changelog		\
+	changelog.in		\
+	changelog.old		\
+	control			\
+	copyright		\
+	dirs			\
+	docs			\
+	ex.doc-base.package	\
+	gdm.pod			\
+	gdmchooser.pod		\
+	gdmlogin.pod		\
+	init			\
+	postinst		\
+	postrm			\
+	rules
