@@ -1,3 +1,9 @@
+Wed Apr 18 22:32:53 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am, configure.in, debian/Makefile.am: fix make distcheck
+	  wrt libintl and make sure we get the debian directory into the
+	  tarball
+
 Tue Apr 17 17:01:59 2001  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.h, gui/gdmconfig-strings.c, gui/gdmconfig.c,
